genera 10 email e le pusha nel array, con Vue scrive l'array nel dom, non aspetta che vengano generate tutte le email

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 .container {
     display: flex;
-    margin-top: 4rem;
+    padding-top: 4rem;
     align-items: flex-start;
     justify-content: center;
     height: 100vh;
